Fixed Double Scroll Bars (Page & Table) in the Web UI
 - usb_server/static/style.css reduced table max-height to fix double scroll bars.
 - Removed united_states_of_browsers/project_path.py .
 - Tweaked docstring for Table class.

--- a/united_states_of_browsers/usb_server/static/style.css
+++ b/united_states_of_browsers/usb_server/static/style.css
@@ -17,7 +17,7 @@ h1 {
     }
 
 .table {
-    max-height: 540px;
+    max-height: 460px;
     max-width: 96%;
     overflow-x: hidden;
     display: block;
